public/collections-css/show.css
@import url("https://fonts.googleapis.com/css2?family=Italiana&family=M+PLUS+Rounded+1c:wght@300;400;500&family=Ubuntu:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&display=swap");

body {
  font-family: "Ubuntu", sans-serif;
  background-color: rgb(15, 15, 15);
}

img {
    border-radius: 8px;
    box-shadow: 1px 6px 6px -3px rgba(0, 0, 0, 0.5);
    width: 100%;
    margin-bottom: 10px;
}

.img-lg {
    display: none;
}

.body-head-container {
    color: white;
    background-color: rgba(65, 65, 65, 0.8);
    margin-bottom: 15px;
}

.body-head-title {
    padding-top: 20px;
    padding-bottom: 15px;
    text-align: center;
}

.body-head-items {
    text-align: center;
    color: white;
    margin-right: 5%;
    margin-left: 5%;
}

.deleteColl { 
    text-align: center;
}


.edit, .delete, .add {
    color: white;
    font-size: 15px;
    border: none;
    padding: 10px;
    text-align: center;
    width: 65px;
}

.add {
    width: 100px;
}

.delete {
    width: 150px;
    background-color: transparent;
}

  
.edit:hover,
.edit:focus {
    color: white;
}

.delete:hover,
.delete:focus {
    color: rgb(219, 4, 4);
    text-decoration: underline;
}

.add:hover,
.add:focus {
    color: white;
}

.games-container {
    display: flex;
    flex-wrap: wrap;
    padding-left: 5%;
    padding-right: 5%;
}

.card-deck {
    display: inline-flex;
    padding-top: 20px;
    margin: auto;
    width: 45%;
}

.card {
    margin: 0 auto;
    width: 100%;
    background-color: #616161;
    border: 2px solid white;
    border-radius: 8px;
    color: white;
    height: 525px;
}
  
.card-body {
    position: relative;
}
  
.card-title {
    margin-bottom: 5px;
    width: 300px;
}

.view, .deleteGame {
    color: white;
    font-size: 15px;
    border: none;
    border-radius: 8px;
    background-color: transparent;
    padding: 10px;
    margin-top: 10px;
    border: 2px solid white;
}

.view {
    padding-left: 16px;
    padding-right: 16px;
}

.delete-form {
    width: 50%;
    margin-left: 10px;
}
  
.view:hover,
.view:focus {
    color: white;
    text-decoration: none;
    background-color: #383838;
}

.deleteGame:hover,
.deleteGame:focus {
    color: white;
    text-decoration: none;
    background-color: #383838;
}

.game-btns {
    display: flex;
}

.metacritic-rating {
    border: 1px solid white;
    border-radius: 8px;
    width: 30px;
    padding-right: 4px;
}


@media (min-width: 900px) {
    body {
      text-align: center;
    }
    .img-sm {
        display: none;
    }

    .img-lg {
        display: flex;
        width: auto;
        margin-left: 20px;
        margin-top: 20px;
        margin-bottom: 20px;
        max-width: 280px;
    }
  
    .body-head-container {
        color: white;
    }
    
    .body-head-title {
        padding-top: 20px;
        text-align: left;
        margin-left: 11%;
    }

    .body-head-items {
        display: flex;
        justify-content: space-between;
        width: 79%;
        margin-left: 11%;
    }

    .body-head-btns {
        display: block;
        text-align: right;
    }

    .top-btns {
        display: flex;
        flex-wrap: nowrap;
    }

    .deleteColl {
        text-align: right;
    }

    .body-head-descr {
        padding-right: 40px;
        text-align: left;
        padding-top: 18px;
    }
    
    .body-head-btns {
        justify-content: flex-end;
    }

    .card-deck {
        display: flex;
        margin: auto;
        margin-bottom: 20px;
        width: 90%;
        align-items: unset;
        flex-flow: row;
    
    }

    .card {
        display: flex;
        margin: 0 auto;
        background-color: #616161;
        border: 2px solid white;
        border-radius: 8px;
        color: white;
        height: 200px;
    }

    .card-body {
       display: flex;
       padding: 0;
    }

    .game-info {
        margin-top: 20px;
        padding-left: 15px;
        text-align: left;
        width: 50%;
    }

    .game-info p {
        margin: 0;
        overflow: hidden;
    }

    .game-btns-container {
        text-align: right;
        width: 35%;
        background-origin: padding-box;
        border-bottom: 195px solid #383838;
        border-left: 75px solid transparent;
        border-bottom-right-radius: 10px;
    }

    .metacritic {
        display: flex;
        justify-content: flex-end;
        flex-direction: row;
        padding-top: 20px;
        padding-right: 20px;
    }

    .game-btns {
        justify-content: flex-end;
        display: block;
        padding-right: 20px;
        text-align: right;
    }
    
    .view {
        padding-left: 30px;
        padding-right: 30px;
    }

    .deleteGame {
        position: relative;
        width: 98px;
    }

    .view:hover,
    .view:focus {
        color: white;
        text-decoration: none;
        background-color: #555454;
    }

    .deleteGame:hover,
    .deleteGame:focus {
        color: white;
        text-decoration: none;
        background-color: #555454;
    }

    .delete-form {
        width: unset;
        padding-top: 10px;
    }

}
  

